microk8s-resources/actions/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostpath-provisioner
  labels:
    k8s-app: hostpath-provisioner
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: hostpath-provisioner
  template:
    metadata:
      labels:
        k8s-app: hostpath-provisioner
    spec:
      serviceAccountName: microk8s-hostpath
      containers:
        - name: hostpath-provisioner
          image: cdkbot/hostpath-provisioner:1.1.0
          volumeMounts:
            - name: pv-volume
              mountPath: $SNAP_COMMON/default-storage
      volumes:
        - name: pv-volume
          hostPath:
            path: $SNAP_COMMON/default-storage
