microk8s-resources/actions/microdash.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microdash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microdash
  name: microdash
  namespace: microdash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microdash
  template:
    metadata:
      labels:
        app: microdash
    spec:
      containers:
      - image: sastix/microdash:1.0
        imagePullPolicy: Always
        name: microdash
        volumeMounts:
        - name: token
          mountPath: "/usr/share/nginx/html/cb"
          readOnly: true
      volumes:
      - name: token
        secret:
          secretName: cb-token
          defaultMode: 511
---
apiVersion: v1
kind: Service
metadata:
  name: microdash-service
  namespace: microdash
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: microdash
